force-app/main/default/objects/Packer__c/Packer__c.object-meta.xml
<CustomObject>
    <label>Packer</label>
    <nameField>
        <displayFormat>Pckr-{0}</displayFormat>
        <label>#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Packers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>