force-app/main/default/objects/Packer__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <label>Code</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>